# Observer_pattern_cpp

./: CMakeLists.txt  event_driven.cpp  main.cpp  plain.cpp  readme.md
.github/workflows/: cmake.yml
api/: plan_management.h  user_management.h
api2/: email_listener.h  event.h  event_system.h  log_listener.h  plan_management_event_driven.h  slack_listener.h  user_management_event_driven.h
lib/: database.h  email.h  log.h  slack.h  user.h
